start adding db

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -146,6 +146,7 @@ module-photos-data = { group = "com.enrech.mondly", name = ":photos:data" }
 module-sharedTypes = { group = "com.enrech.mondly", name = ":shared-types" }
 module-testing = { group = "com.enrech.mondly", name = ":testing" }
 module-viewmodel-util = { group = "com.enrech.mondly", name = ":viewmodel-util" }
+module-db-data = { group = "com.enrech.mondly", name = ":db:data" }
 
 [plugins]
 
