--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ versionCode = "1"
 versionName = "1.0.0"
 
 agp = "8.3.1"
-kotlin = "1.9.0"
+kotlin = "1.9.22"
 coreKtx = "1.12.0"
 junit = "4.13.2"
 androidx-junit = "1.1.5"
@@ -138,7 +138,7 @@ io-ktor-client-mock = { group = "io.ktor", name = "ktor-client-mock", version.re
 module-core-ui = { group = "com.enrech.mondly", name = ":core:ui" }
 module-core-domain = { group = "com.enrech.mondly", name = ":core:domain" }
 module-core-data = { group = "com.enrech.mondly", name = ":core:data" }
-module-designSystem = { group = "com.enrech.mondly", name = ":design_system" }
+module-designSystem = { group = "com.enrech.mondly", name = ":design-system" }
 module-main-ui = { group = "com.enrech.mondly", name = ":main:ui" }
 module-photos-ui = { group = "com.enrech.mondly", name = ":photos:ui" }
 module-photos-domain = { group = "com.enrech.mondly", name = ":photos:domain" }
