--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ hilt = "2.50"
 timber = "5.0.1"
 hilt-navigation-compose = "1.2.0"
 constraintlayoutCompose = "1.0.1"
+slf4j = "2.0.11"
 
 ktor = "2.3.7"
 kotlinx-coroutines = "1.7.3"
@@ -133,6 +134,7 @@ hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testi
 io-mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 io-mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk" }
 io-ktor-client-mock = { group = "io.ktor", name = "ktor-client-mock", version.ref = "ktor" }
+org-slf4j = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
 
 #Modules
 module-core-ui = { group = "com.enrech.mondly", name = ":core:ui" }
